deployments/ingress-custom-namespace/ingress-svc-namespace.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vid-ingress-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: vid-namespace
spec:
  rules:
    - host: vidhan-family.com
      http:
        paths:
          - path: /family/?(.+)
            pathType: Prefix
            backend:
              service:
                name: vid-family-service-svc
                port:
                  number: 80
